# agadir

./: Cargo.toml  Justfile  Readme.md  Release.md
.github/workflows/: ci.yaml  release.yaml
src/: app.rs  cli.rs  lib.rs  main.rs  post.rs  server.rs  ui.rs
